# RNFE

./: Cargo.toml  test_rom.nes  test_simple.nes  txt
app/: main.py
docs/Aprendizado/: README.md
docs/Aprendizado/1-Operações Bitwise/: 1-bitwise.md  main
docs/Aprendizado/2-CPU 6502/: 1-cpu hierarquy
docs/dev_docs/Aprendizado/1-Operações Bitwise/: main.rs
docs/dev_docs/daily_dev/: 2024-02-23.md
src/: apu.rs  bus.rs  cartridge.rs  cpu6502.rs  debug.rs  diagnostic.rs  display.rs  font.rs  main.rs  nes.rs  olc6502.rs  ppu.rs  ui.rs
src/mappers/: axrom.rs  bnrom.rs  camerica.rs  cnrom.rs  colordreams.rs  dxrom.rs  fme7.rs  gxrom.rs  mapper227.rs  mmc1.rs  mmc2.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
