cargo-features = ["edition2024"]

[package]
name = "RNFE"
edition = "2024"
version = "0.0.1"
authors = ["Caua <cauaalvarenganeves@gmail.com>"]
description = "Rust Nintendo Famicon Emulator" 
repository = "https://github.com/Caua726/RNFE"


[dependencies]
pixels = "0.15.0"
winit = { version = "0.30.12", features = ["x11", "wayland"] }
